dataset123/2025-2/610742602/users/14016319/executions/2563853024_997093868.log
== SUBMISSION (2025-09-02 20:17:29)
-- CODE: 
a = float(input("Insira o a aqui"))
b = float(input(Insira o b aqui))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
-- ERROR:
File "XXXX", line 2
    b = float(input(Insira o b aqui))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
-- ERROR:
File "XXXX", line 2
    b = float(input(Insira o b aqui))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
-- ERROR:
File "XXXX", line 2
    b = float(input(Insira o b aqui))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
-- ERROR:
File "XXXX", line 2
    b = float(input(Insira o b aqui))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
-- ERROR:
File "XXXX", line 2
    b = float(input(Insira o b aqui))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
-- ERROR:
File "XXXX", line 2
    b = float(input(Insira o b aqui))
                    ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:18:01)
-- CODE: 
a = int(input("Insira o a aqui"))
b = int(input("Insira o b aqui"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Insira o a aquiInsira o b aqui20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Insira o a aquiInsira o b aqui5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Insira o a aquiInsira o b aqui68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Insira o a aquiInsira o b aqui185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Insira o a aquiInsira o b aqui44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Insira o a aquiInsira o b aqui108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:18:01)
-- CODE: 
a = int(input("Insira o a aqui"))
b = int(input("Insira o b aqui"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Insira o a aquiInsira o b aqui20000
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Insira o a aquiInsira o b aqui5
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Insira o a aquiInsira o b aqui68
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Insira o a aquiInsira o b aqui185
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Insira o a aquiInsira o b aqui44
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Insira o a aquiInsira o b aqui108
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:17:46)
-- CODE: 
a = float(input("Insira o a aqui"))
b = float(input("Insira o b aqui"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Insira o a aquiInsira o b aqui20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Insira o a aquiInsira o b aqui5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Insira o a aquiInsira o b aqui68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Insira o a aquiInsira o b aqui185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Insira o a aquiInsira o b aqui44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Insira o a aquiInsira o b aqui108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:17:48)
-- CODE: 
a = float(input("Insira o a aqui"))
b = float(input("Insira o b aqui"))
soma = a + b
print(soma)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10000
10000
---- correct output:
20000
---- user output:
Insira o a aquiInsira o b aqui20000.0
-- TEST CASE 2:
---- input:
2
3
---- correct output:
5
---- user output:
Insira o a aquiInsira o b aqui5.0
-- TEST CASE 3:
---- input:
12
56
---- correct output:
68
---- user output:
Insira o a aquiInsira o b aqui68.0
-- TEST CASE 4:
---- input:
100
85
---- correct output:
185
---- user output:
Insira o a aquiInsira o b aqui185.0
-- TEST CASE 5:
---- input:
-10
54
---- correct output:
44
---- user output:
Insira o a aquiInsira o b aqui44.0
-- TEST CASE 6:
---- input:
120
-12
---- correct output:
108
---- user output:
Insira o a aquiInsira o b aqui108.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
